bpo-45375: Fix assertion failure due to searching for stdlib in unnormalised paths (GH-28735)